--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,8 @@
     border: none;
     border-radius: 10px;
     padding: 12px 28px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 700;
     font-family: "Raleway", sans-serif;
     cursor: pointer;
     border: 1px solid transparent;
@@ -36,6 +37,7 @@
     border: 1px solid #4E47FF;
     transform: scale(1.05);
     box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    font-size: 14px;
 }
 
 /* Header styles */
@@ -217,7 +219,7 @@ nav{
     width: 70%;
     background-color: #fff;
     border-radius: 14px;
-    margin: 0 auto 95px;
+    margin: 0 auto 150px;
     padding: 70px;
     text-align: center;
 }
@@ -238,4 +240,68 @@ nav{
 .focus-img{
     margin-top: 40px;
     border-radius: 48px;
+}
+
+/* let's get in touch section styles */
+.contact-form{
+    width: 70%;
+    margin: 0 auto 90px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact-title{
+    font-size: 97px;
+    font-weight: bold;
+    width: 40%;
+    margin-right: 137px;
+}
+.info-collector{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+.info-collector 
+label[for="email"],
+label[for="name"],
+label[for="textarea"]{
+    font-family: "Inter", sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: #000000;
+    margin-bottom: 10px;
+}   
+.info-collector 
+input[type="email"],
+input[type="name"]{
+    font-family:  "Inter", sans-serif;
+    padding: 20px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    margin-bottom: 19px;
+    font-size: 1.1rem;
+    border: 1px solid #D6DDED;
+}
+
+.info-collector 
+textarea[name="textarea"]{
+    width: 100%;
+    height: 150px;
+    padding: 20px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-family:  "Inter", sans-serif;
+    margin-bottom: 20px;
+    overflow: hidden;
+    resize: none;
+    font-size: 1.1rem;
+    border: 1px solid #D6DDED;
+}
+
+.info-collector 
+button[type="submit"]{
+    padding: 20px 0;
 }
