--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,7 @@
 /* Header styles */
 header{
     width: 100vw;
-    height: 80vh;
+    height: 85vh;
     background-image: url(../Assets/Hero-bg.png);
     background-position: center;
     margin-bottom: 116px;
@@ -304,4 +304,40 @@ textarea[name="textarea"]{
 .info-collector 
 button[type="submit"]{
     padding: 20px 0;
+}
+
+/* footer section styles */
+footer{
+    width: 100vw;
+    height: 40vh;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-title{
+    text-align: center;
+    font-size: 100px;
+    font-family:  "Inter", sans-serif;
+    font-weight: 800;
+    color: #4E47FF;
+    margin-bottom: 8px;
+}
+
+.footer-sub-title{
+    text-align: center;
+    font-size: 16px;
+    color: #8987A1;
+    width: 500px;
+    margin-bottom: 20px;
+}
+
+.footer-nav{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    gap: 55px;
+    color: #8987A1;
 }
